--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: python
 python:
   - "2.6"
   - "2.7"
+before_install:
+  - export TZ=America/New_York
 install: pip install -r requirements.txt
 script: nosetests
