--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
-language: python
-python:
-  - "2.6"
-  - "2.7"
 before_install:
   - export TZ=America/New_York
-install: pip install -r requirements.txt
-script: nosetests
+env:
+  matrix:
+    - TOXENV=py26,py27
+    - TOXENV=pylint
+language: python
+python: 3.7
+install:
+  - pip install tox
+script:
+  - tox -e $TOXENV
